# go-simple-graphql

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  env.sh  go.mod  go.sum  gqlgen.yml  server.go  server_test.go
cmd/: BUILD.bazel  server.go  server_test.go
database/: BUILD.bazel  mongo.go
graph/: BUILD.bazel  generated.go  resolver.go  schema.graphqls  schema.resolvers.go
graph/middleware/: BUILD.bazel  middleware.go
graph/model/: BUILD.bazel  models_gen.go
graph/service/: BUILD.bazel  auth.go  blog.go
mock/: BUILD.bazel  facker.go
utils/: BUILD.bazel  auth.go  const.go  utils.go
