load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/0x726f6f6b6965/go-simple-graphql
gazelle(name = "gazelle")

go_library(
    name = "go-simple-graphql_lib",
    srcs = ["server.go"],
    importpath = "github.com/0x726f6f6b6965/go-simple-graphql",
    visibility = ["//visibility:private"],
    deps = [
        "//database",
        "//graph",
        "//graph/middleware",
        "//utils",
        "@com_github_99designs_gqlgen//graphql/handler:go_default_library",
        "@com_github_99designs_gqlgen//graphql/playground:go_default_library",
        "@com_github_go_chi_chi_v5//:go_default_library",
    ],
)

go_binary(
    name = "go-simple-graphql",
    embed = [":go-simple-graphql_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go-simple-graphql_test",
    srcs = ["server_test.go"],
    embed = [":go-simple-graphql_lib"],
    deps = [
        "//database",
        "//graph/model",
        "//mock",
        "//utils",
        "@com_github_steinfletcher_apitest//:go_default_library",
    ],
)
