load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = ["mongo.go"],
    importpath = "github.com/0x726f6f6b6965/go-simple-graphql/database",
    visibility = ["//visibility:public"],
    deps = [
        "//utils",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
