load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["facker.go"],
    importpath = "github.com/0x726f6f6b6965/go-simple-graphql/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//database",
        "//graph/model",
        "//utils",
        "@com_github_go_faker_faker_v4//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//bson/primitive:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
    ],
)
